reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_one_basic_field_string_reflectapi_both_equally2.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_input_schema :: <\nTestStructOneBasicFieldStringReflectBothEqually2 > ().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually2",
      "fields": {
        "named": [
          {
            "name": "_f",
            "type": {
              "name": "u32"
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "name": "u32",
      "description": "32-bit unsigned integer"
    }
  ]
}
