reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_one_basic_field_string_reflectapi_both_with_attributes-2.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_typescript_code :: <\nTestStructOneBasicFieldStringReflectBothDifferently > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.basic.input.TestStructOneBasicFieldStringReflectBothDifferently,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<
      reflectapi_demo.tests.basic.output.TestStructOneBasicFieldStringReflectBothDifferently,
      {}
    >;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace basic {
      export namespace input {
        export interface TestStructOneBasicFieldStringReflectBothDifferently {
          _f: number /* i32 */;
        }
      }

      export namespace output {
        export interface TestStructOneBasicFieldStringReflectBothDifferently {
          _f: number /* u32 */;
        }
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.basic.input.TestStructOneBasicFieldStringReflectBothDifferently,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.basic.input.TestStructOneBasicFieldStringReflectBothDifferently,
        {},
        reflectapi_demo.tests.basic.output.TestStructOneBasicFieldStringReflectBothDifferently,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
