reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_one_basic_field_u32.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super::into_input_schema::<TestStructOneBasicFieldU32>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::basic::TestStructOneBasicFieldU32",
      "fields": {
        "named": [
          {
            "name": "_f",
            "type": {
              "name": "u32"
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "name": "u32",
      "description": "32-bit unsigned integer"
    }
  ]
}
